<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_formulario"
        android:padding="10dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_formulario"
            android:text="@string/titulo"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_nombre"
                    android:text="@string/nombre"
                    android:textSize="24sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nombre"
                    android:inputType="text"
                    android:hint="Ingresa tu nombre"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_contraseña"
                    android:text="@string/contraseña"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_contraseña"
                    android:inputType="textPassword"
                    android:hint="Ingresa contraseña"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_repetir_contraseña"
                    android:text="@string/repetir_contraseña"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_repetir_contraseña"
                    android:inputType="textPassword"
                    android:hint="Ingresa contraseña nuevamente"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_correo"
                    android:text="@string/correo"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_correo"
                    android:inputType="textEmailAddress"
                    android:hint="Ingresa correo electrónico"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sexo"
                    android:text="@string/sexo"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="24sp"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
            <RadioButton
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_masculino"
                    android:text="@string/masculino"
                    android:textSize="20sp"
                    android:onClick="OnRadioButtonClicked"
                    android:checked="true"
                    android:layout_weight="1"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_femenino"
                    android:text="@string/femenino"
                    android:textSize="20sp"
                    android:onClick="OnRadioButtonClicked"
                    android:layout_weight="1"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hobbies"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_deportes"
                    android:text="@string/deportes"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_pasear"
                    android:text="@string/pasear"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_bailar"
                    android:text="@string/bailar"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_pintar"
                    android:text="@string/pintar"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>
        </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b_fecha"
                android:text="@string/fecha"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fecha"
                android:textColor="@color/black"
                android:text="@string/fecha_nacimiento"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_lugar"
                    android:text="@string/lugar"
                    android:textSize="24sp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_lugar"
                android:entries="@array/ciudades"
                android:layout_gravity="center"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_guardar"
                android:text="@string/guardar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_informacion"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
